force-app/main/default/objects/zkmulti__NaftaCo__c/zkmulti__NaftaCo__c.object-meta.xml
<CustomObject>
    <label>USMCA CO</label>
    <nameField>
        <displayFormat>USMCA-CO-{00000000}</displayFormat>
        <label>USMCA CO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USMCA COs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>