force-app/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerAddressCity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerAddressCity__c</fullName>
    <label>Producer Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>