force-app/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerAddressPostalCode__c</fullName>
    <label>Producer Address Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>