force-app/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerCompanyName__c</fullName>
    <label>Producer Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>