force-app/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerEmail__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerEmail__c</fullName>
    <label>Producer Email</label>
    <type>Email</type>
</CustomField>