force-app/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__SoldToCompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToCompanyName__c</fullName>
    <label>Sold To Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>